# Meta-R2

./: .env.example  .gitattributes  .gitignore  .hfignore  BLOG.md  Dockerfile  HF_MODEL_CARD.md  IMPLEMENTATION_PLAN_HARDENING.md  Implementation_final.md  Implementation_plan_v2.md  LifeStack_Training.ipynb  MENTOR_PITCH.md  README.md  REWARD_SYSTEM_REVIEW.md  action_space.py  agent.py  app.py  app_flask.py  baseline.json  conflict_generator.py  conflict_predictor.py  conflicts.json  counterfactuals.py  dry_run_output.txt  intake.py  life_state.py  lifestack_env.py  lifestack_gym_env.py  longitudinal_demo.py  memory.py  metric_schema.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  run-app.sh  run-server.sh  run_episode.py  server.py  setup.sh  (+7 more)
agent/: agent.py  conflict_generator.py  conflict_predictor.py  counterfactuals.py  memory.py
core/: action_space.py  cascade_utils.py  feedback.py  life_state.py  lifestack_env.py  lifestack_gym_env.py  metric_schema.py  reward.py  task.py  verifier.py
data/: before_after_comparison.json  demo_signals.json  holdout_tasks.json  simperson_profiles.json
docs/: CONTRIBUTING.md  DEPLOYMENT.md  HF_MODEL_CARD_V1.md  HF_MODEL_CARD_V4.md  INDEX.md  README.md  app.md  blog.md  configuration.md  conflict_generator.md  eval.md  implementation_summary.md  kaggle_train.md  lifestack_env.md  memory.md  mentor_pitch.md  model_card.md  model_comparison_v4.md  reward.md  scripts.md  task.md  train_trl.md  training_guide.md
intake/: calendar_intake.py  gmail_intake.py  intake.py  simperson.py
lifestack_model/: config.json
(+33 files in other folders)
